--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -115,13 +115,13 @@
         }
     }
 
-    /* ====== CINTA SUPERIOR ====== */
+    /* ====== CINTA SUPERIOR ORIGINAL ====== */
     .corporate-ticker {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #a8c4e6;
+        background-color: #a8c4e6; /* COLOR ORIGINAL */
         overflow: hidden;
         height: 40px;
         z-index: 9999;
@@ -201,76 +201,82 @@
     .carousel-arrow-left { left: 10px; }
     .carousel-arrow-right { right: 10px; }
 
-    /* ====== SECCION SOPORTE REMOTO ====== */
+    /* ====== SECCION SOPORTE REMOTO CON FONDO ANIMADO ====== */
     .support-section {
         margin: 30px auto;
-        padding: 60px 20px;
+        padding: 80px 20px;
         color: #fff;
         border-radius: 12px;
-        background: linear-gradient(135deg, #0066ff, #00ccff, #0066ff);
-        background-size: 400% 400%;
-        animation: gradientBG 15s ease infinite;
+        background: linear-gradient(270deg, #ff416c, #ff4b2b, #00c6ff, #0072ff, #43e97b, #38f9d7);
+        background-size: 1200% 1200%;
+        animation: gradientBG 6s linear infinite;
+        text-align: center;
+        position: relative;
+        overflow: hidden;
     }
 
     @keyframes gradientBG {
-        0%{background-position:0% 50%}
-        50%{background-position:100% 50%}
-        100%{background-position:0% 50%}
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
     }
 
     .support-section h2 {
-        font-size: 28px;
+        font-size: 32px;
         margin-bottom: 20px;
+        font-weight: bold;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
     }
 
     .support-section p {
-        font-size: 16px;
-        margin-bottom: 20px;
+        font-size: 18px;
+        margin-bottom: 30px;
     }
 
     .support-section .support-button {
         display: inline-block;
-        padding: 12px 28px;
-        background-color: #28a745;
-        color: white;
+        padding: 16px 40px;
+        font-size: 18px;
         font-weight: bold;
-        border-radius: 8px;
+        color: #fff;
+        background: linear-gradient(135deg, #ff416c, #ff4b2b);
+        border-radius: 10px;
         text-decoration: none;
-        transition: background-color 0.3s;
+        transition: all 0.3s ease;
+        box-shadow: 0 6px 18px rgba(0,0,0,0.3);
     }
 
     .support-section .support-button:hover {
-        background-color: #1e7e34;
+        background: linear-gradient(135deg, #ff4b2b, #ff416c);
+        transform: translateY(-3px);
+        box-shadow: 0 10px 25px rgba(0,0,0,0.4);
     }
 
-    /* ====== SECCION PRODUCTOS ====== */
-    .products-section {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+    /* ====== PRODUCTOS DEBAJO DEL CARRUSEL ====== */
+    .products-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 20px;
-        margin: 30px auto;
-        max-width: 1200px;
+        margin: 40px 0;
+        padding: 0 20px;
     }
 
     .product {
-        width: 250px;
-        text-align: left;
         background-color: #ffffff;
         border-radius: 12px;
-        padding: 15px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        padding: 20px;
+        text-align: left;
+        box-shadow: 0 6px 18px rgba(0,0,0,0.1);
     }
 
     .product h3 {
-        font-size: 16px;
-        font-weight: bold;
-        margin-bottom: 5px;
+        font-size: 18px;
+        margin-bottom: 10px;
     }
 
     .product p {
         font-size: 14px;
-        margin: 3px 0;
+        margin: 5px 0;
     }
 
     .buy-button {
@@ -278,8 +284,8 @@
         align-items: center;
         justify-content: center;
         gap: 6px;
-        margin-top: 5px;
-        padding: 8px 12px;
+        margin-top: 10px;
+        padding: 10px 16px;
         background-color: #28a745;
         color: white;
         border-radius: 6px;
@@ -300,12 +306,11 @@
         padding: 1px 4px;
         border-radius: 3px;
     }
-
 </style>
 </head>
 <body>
 
-<!-- CINTA SUPERIOR -->
+<!-- CINTA SUPERIOR ORIGINAL -->
 <div class="corporate-ticker">
   <div class="ticker-text">
     <img src="rustdesk-logo.png" alt="RustDesk Logo">
@@ -353,12 +358,12 @@
 <!-- SECCION SOPORTE REMOTO -->
 <div class="support-section">
     <h2>Solicitar Soporte Remoto</h2>
-    <p>Conéctese con nuestros técnicos de forma segura y profesional, de manera inmediata y confiable.</p>
-    <a href="https://wa.me/51945482880" class="support-button" target="_blank">Conectar Ahora</a>
+    <p>Conéctese con nuestros técnicos de manera segura y profesional para resolver cualquier inconveniente en su equipo.</p>
+    <a href="https://wa.me/51945482880" target="_blank" class="support-button">Conectar Ahora</a>
 </div>
 
-<!-- SECCION PRODUCTOS -->
-<div class="products-section">
+<!-- PRODUCTOS -->
+<div class="products-grid">
     <div class="product">
         <h3>Software Ofimático</h3>
         <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
@@ -395,14 +400,6 @@
         <h3>Edición de Video</h3>
         <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
         <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
-        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-            Comprar ahora <span class="small-note">WhatsApp</span>
-        </a>
-    </div>
-    <div class="product">
-        <h3>Producción Musical</h3>
-        <p>Software para composición, mezcla y edición de audio profesional.</p>
-        <p>Precio Perú: S/. 20 | Chile: $9,500 CLP</p>
         <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
             Comprar ahora <span class="small-note">WhatsApp</span>
         </a>
@@ -495,7 +492,8 @@
     <p>© 2025 Robert Software. Todos los derechos reservados.</p>
     <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
         <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
-        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
+        | Instagram: <a href="https://www.instagram.com/robert.softwar" target="_blank">@robert.softwar</a> 
+        | Web: <a href="https://www.robert-software.com" target="_blank">www.robert-software.com</a>
     </p>
 </footer>
 
