--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -207,11 +207,11 @@
         content: '';
         position: absolute;
         inset: 0;
-        background: linear-gradient(135deg, #5e72e4, #2b6cb0, #5e72e4);
+        background: linear-gradient(135deg, #4a69bd, #2d4275, #4a69bd);
         background-size: 400% 400%;
-        animation: waveBG 6s ease-in-out infinite;
+        animation: waveBG 4s ease-in-out infinite;
         z-index: -1;
-        opacity: 0.85;
+        opacity: 0.9;
     }
 
     @keyframes waveBG {
