--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -11,41 +11,38 @@
         background-color: #f0f2f5;
         color: #333;
         text-align: center;
-        padding: 40px 20px;
         margin: 0;
-        position: relative;
+        padding: 0;
         min-height: 100vh;
     }
 
     .logo {
         max-width: 180px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
 
     .backup-text {
         font-size: 14px;
-        margin-bottom: 8px;
         color: #555;
+        margin-bottom: 5px;
     }
 
     h1 {
-        font-size: 36px; 
-        margin: 15px 0;
+        font-size: 36px;
         font-weight: bold;
         color: #1a1a1a;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+        margin: 5px 0 20px;
     }
 
     .message {
         font-size: 16px;
-        margin-top: 15px;
         line-height: 1.5;
         color: #333;
+        margin-bottom: 20px;
     }
 
-    /* ====== BOTONES DE DESCARGA CON LUZ ====== */
-    .download-link, .support-button {
-        position: relative;
+    .download-link {
         display: inline-flex;
         align-items: center;
         justify-content: center;
@@ -59,10 +56,26 @@
         font-weight: bold;
         font-size: 16px;
         cursor: pointer;
-        transition: transform 0.2s;
-        overflow: hidden;
-        z-index: 1;
+        transition: 0.3s;
         box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        overflow: hidden;
+        position: relative;
+    }
+
+    .download-link::after {
+        content: '';
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: rgba(255,255,255,0.3);
+        transform: rotate(45deg) translateX(-100%);
+        transition: transform 0.7s ease;
+    }
+
+    .download-link:hover::after {
+        transform: rotate(45deg) translateX(100%);
     }
 
     .download-link img {
@@ -70,48 +83,43 @@
         height: 24px;
     }
 
-    .download-link:hover, .support-button:hover {
-        transform: translateY(-2px);
-    }
-
-    /* LUZ QUE SIGUE EL CURSOR */
-    .download-link::before, .support-button::before {
-        content: '';
-        position: absolute;
-        top: var(--y, 50%);
-        left: var(--x, 50%);
-        width: 200px;
-        height: 200px;
-        background: radial-gradient(circle, rgba(255,255,255,0.4) 0%, rgba(255,255,255,0) 60%);
-        transform: translate(-50%, -50%);
-        transition: 0.1s;
+    /* GIF */
+    .arrow-top {
+        position: fixed;
+        top: 50px;
+        right: 60px;
+        width: 60px;
+        z-index: 1000;
         pointer-events: none;
-        border-radius: 50%;
-        z-index: 0;
+        display: none;
+        animation: float 2s ease-in-out infinite alternate;
     }
 
-    /* ====== CINTA SUPERIOR ORIGINAL ====== */
+    @keyframes float {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(-8px); }
+    }
+
+    /* Cinta superior */
     .corporate-ticker {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         background-color: #a8c4e6;
-        overflow: hidden;
         height: 40px;
-        z-index: 9999;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         display: flex;
         align-items: center;
-        box-sizing: border-box;
+        overflow: hidden;
+        z-index: 9999;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     }
 
     .ticker-text {
         display: inline-block;
         white-space: nowrap;
-        color: #ffffff;
+        color: #fff;
         font-weight: 600;
-        font-family: 'Arial', sans-serif;
         font-size: 16px;
         padding-left: 100%;
         animation: scrollTicker 20s linear infinite;
@@ -129,38 +137,27 @@
         100% { transform: translateX(-100%); }
     }
 
-    /* ====== MAIN CONTENT ====== */
-    .main-content {
-        max-width: 900px;
-        margin: 60px auto 40px;
-        padding: 0 20px;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        align-items: center;
+    /* Carrusel */
+    .carousel-wrapper {
+        max-width: 800px;
+        margin: 30px auto;
+        position: relative;
     }
 
-    /* ====== CARRUSEL ====== */
     .carousel {
-        position: relative;
-        width: 100%;
-        max-width: 800px;
         overflow: hidden;
         border-radius: 12px;
-        border: 1px solid rgba(0,0,0,0.05);
         box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
 
     .carousel-track {
         display: flex;
         transition: transform 0.5s ease;
-        touch-action: pan-x;
     }
 
     .carousel-track img {
         width: 100%;
         flex-shrink: 0;
-        border-radius: 12px;
         user-select: none;
         pointer-events: none;
     }
@@ -187,66 +184,20 @@
     .carousel-arrow-left { left: 10px; }
     .carousel-arrow-right { right: 10px; }
 
-    /* ====== SECCION SOLICITAR SOPORTE REMOTO ====== */
-    .support-section {
-        width: 100%;
-        max-width: 800px;
-        border-radius: 12px;
-        overflow: hidden;
-        position: relative;
-        color: white;
-        padding: 50px 20px;
+    /* Productos */
+    .products-section {
         display: flex;
-        flex-direction: column;
-        align-items: center;
+        flex-wrap: wrap;
         justify-content: center;
-    }
-
-    /* Fondo animado tipo ola inclinada */
-    .support-section::before {
-        content: '';
-        position: absolute;
-        inset: 0;
-        background: linear-gradient(135deg, #4a69bd, #2d4275, #4a69bd);
-        background-size: 400% 400%;
-        animation: waveBG 4s ease-in-out infinite;
-        z-index: -1;
-        opacity: 0.9;
-    }
-
-    @keyframes waveBG {
-        0% { background-position: 0% 50%; }
-        50% { background-position: 100% 50%; }
-        100% { background-position: 0% 50%; }
-    }
-
-    .support-section h2 {
-        font-size: 28px;
-        margin-bottom: 20px;
-        text-shadow: 0 0 15px rgba(255,255,255,0.4);
-    }
-
-    .support-section p {
-        font-size: 16px;
-        margin-bottom: 30px;
-        max-width: 700px;
-        text-align: center;
-    }
-
-    /* ====== PRODUCTOS DEBAJO DEL CARRUSEL ====== */
-    .products-column {
-        width: 100%;
-        max-width: 900px;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
         gap: 20px;
-        margin-top: 20px;
+        margin: 40px 20px 60px;
     }
 
     .product {
+        width: 240px;
         background-color: #fff;
-        border-radius: 12px;
         padding: 15px;
+        border-radius: 12px;
         box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         text-align: left;
     }
@@ -276,31 +227,81 @@
         font-size: 14px;
         font-weight: bold;
         transition: background-color 0.2s;
-        position: relative;
-        overflow: hidden;
     }
 
     .buy-button:hover {
         background-color: #1e7e34;
     }
 
-    .small-note {
-        font-size: 11px;
+    /* Solicitar Soporte Remoto */
+    .support-section {
+        margin: 40px 20px;
+        padding: 40px 20px;
+        border-radius: 16px;
         color: #fff;
-        background-color: #1b5e20;
-        padding: 1px 4px;
-        border-radius: 3px;
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+        background: linear-gradient(135deg, #1e3c72, #2a5298, #1e3c72);
+        background-size: 400% 400%;
+        animation: waveBG 6s ease infinite;
     }
 
+    .support-section h2 {
+        font-size: 28px;
+        margin-bottom: 20px;
+    }
+
+    .support-section p {
+        font-size: 16px;
+        margin-bottom: 30px;
+    }
+
+    .support-btn {
+        display: inline-block;
+        padding: 14px 30px;
+        font-size: 16px;
+        font-weight: bold;
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
+        background-color: #007bff;
+        transition: all 0.3s ease;
+    }
+
+    .support-btn::before {
+        content: '';
+        position: absolute;
+        top: -50%;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: rgba(255,255,255,0.2);
+        transform: rotate(45deg) translateX(-100%);
+        transition: transform 0.5s ease;
+    }
+
+    .support-btn:hover::before {
+        transform: rotate(45deg) translateX(100%);
+    }
+
+    @keyframes waveBG {
+        0%{background-position:0% 50%;}
+        50%{background-position:100% 50%;}
+        100%{background-position:0% 50%;}
+    }
+
+    /* Footer */
     footer {
         font-size: 14px;
         color: #555;
         text-align: center;
         background-color: #f0f2f5;
-        padding: 10px 20px;
-        line-height: 1.4;
-        max-width: 800px;
-        margin: 40px auto 0;
+        padding: 20px;
+        line-height: 1.6;
     }
 
     footer a {
@@ -313,59 +314,44 @@
         color: #004080;
     }
 
-    /* ====== GIF ====== */
-    .arrow-top {
-        position: fixed;
-        top: 50px;
-        right: 60px;
-        width: 60px;
-        z-index: 1000;
-        pointer-events: none;
-        display: none;
-        animation: float 2s ease-in-out infinite alternate;
-    }
-
-    @keyframes float {
-        0% { transform: translateY(0); }
-        100% { transform: translateY(-8px); }
+    @media (max-width: 768px) {
+        .carousel-wrapper { max-width: 100%; }
+        .products-section { flex-direction: column; align-items: center; }
     }
 </style>
 </head>
 <body>
 
-<!-- CINTA SUPERIOR ORIGINAL -->
+<!-- Cinta superior -->
 <div class="corporate-ticker">
   <div class="ticker-text">
     <img src="rustdesk-logo.png" alt="RustDesk Logo">
     <img src="solzze-logo.png" alt="Solzze Logo">
     <img src="rs-logo.png" alt="RS Logo">
-    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota profesional.
+    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota utilizada para brindar soporte técnico profesional, seguro y confiable a nuestros clientes. Descargue las versiones más recientes y certificadas para Windows y macOS.
   </div>
 </div>
 
 <!-- GIF -->
 <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
+<!-- Logo y respaldo -->
 <p class="backup-text">Respaldado por:</p>
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
 <h1>RustDesk</h1>
 <p class="message">Seleccione su sistema operativo para iniciar la descarga de RustDesk.</p>
 
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin">
-   <img src="windows.svg" alt="Windows"> Descargar para Windows
+<!-- Botones de descarga -->
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" class="download-link" id="btnWin">
+    <img src="windows.svg" alt="Windows"> Descargar para Windows
+</a>
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" class="download-link" id="btnMac">
+    <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac">
-   <img src="macos.svg" alt="macOS"> Descargar para macOS
-</a>
-
-<!-- MAIN CONTENT -->
-<div class="main-content">
-
-    <!-- CARRUSEL -->
+<!-- Carrusel -->
+<div class="carousel-wrapper">
     <div class="carousel">
         <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
         <div class="carousel-track">
@@ -376,59 +362,51 @@
         </div>
         <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
     </div>
-
-    <!-- SECCION SOLICITAR SOPORTE REMOTO -->
-    <div class="support-section">
-        <h2>Solicitar Soporte Remoto</h2>
-        <p>Conéctese con nuestros técnicos de manera segura y confiable. Obtenga ayuda profesional para sus sistemas y equipos sin salir de su oficina.</p>
-        <a href="https://wa.me/51945482880" target="_blank" class="support-button">Conectar Ahora</a>
-    </div>
-
-    <!-- PRODUCTOS DEBAJO -->
-    <div class="products-column">
-        <div class="product">
-            <h3>Software Ofimático</h3>
-            <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
-            <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Antivirus</h3>
-            <p>Protección de tus equipos por 1 año contra virus, malware y amenazas online.</p>
-            <p>Precio Perú: S/. 35 | Chile: $15,000 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Gestión de PDF</h3>
-            <p>Edición, creación y conversión de archivos PDF de forma permanente.</p>
-            <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Software de Diseño y Creatividad</h3>
-            <p>Acceso a herramientas de diseño profesional con suscripción anual para proyectos creativos.</p>
-            <p>Precio Perú: S/. 195 / 1 año | Chile: $69,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-        <div class="product">
-            <h3>Edición de Video</h3>
-            <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
-            <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">
-                Comprar ahora <span class="small-note">WhatsApp</span>
-            </a>
-        </div>
-    </div>
-
 </div>
+
+<!-- Productos -->
+<div class="products-section">
+    <div class="product">
+        <h3>Software Ofimático</h3>
+        <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
+        <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+    </div>
+    <div class="product">
+        <h3>Antivirus</h3>
+        <p>Protección de tus equipos por 1 año contra virus, malware y amenazas online.</p>
+        <p>Precio Perú: S/. 35 | Chile: $15,000 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+    </div>
+    <div class="product">
+        <h3>Edición de Video</h3>
+        <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
+        <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
+        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+    </div>
+</div>
+
+<!-- Solicitar soporte remoto -->
+<div class="support-section">
+    <h2>Solicitar Soporte Remoto</h2>
+    <p>Reciba asistencia profesional y segura para sus sistemas y equipos directamente desde nuestros técnicos certificados.</p>
+    <button class="support-btn">Conectar Ahora</button>
+</div>
+
+<!-- Footer completo -->
+<footer>
+    <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
+    <p>© 2025 Robert Software. Todos los derechos reservados.</p>
+    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
+        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
+        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
+    </p>
+    <p>Redes sociales: 
+        <a href="https://www.instagram.com/robert.softwar" target="_blank">Instagram</a>, 
+        <a href="https://www.facebook.com/RobertSoftware" target="_blank">Facebook</a>, 
+        <a href="https://www.robert-software.com" target="_blank">Página Web</a>
+    </p>
+</footer>
 
 <script>
     const gif = document.getElementById('downloadGif');
@@ -466,7 +444,6 @@
         );
     });
 
-    /* CARRUSEL */
     const track = document.querySelector('.carousel-track');
     const slides = Array.from(track.children);
     const prevButton = document.querySelector('.carousel-arrow-left');
@@ -509,30 +486,8 @@
         else if(diff < -50){ index = (index - 1 + total) % total; updateCarousel(); isDragging=false; }
     });
 
-    track.addEventListener('touchend', () => isDragging = false);
+    track.addEventListener('touchend', () => { isDragging = false; });
 
-    /* LUZ QUE SIGUE EL CURSOR EN BOTONES */
-    const buttons = document.querySelectorAll('.download-link, .support-button');
-
-    buttons.forEach(btn => {
-        btn.addEventListener('mousemove', e => {
-            const rect = btn.getBoundingClientRect();
-            const x = e.clientX - rect.left;
-            const y = e.clientY - rect.top;
-            btn.style.setProperty('--x', `${x}px`);
-            btn.style.setProperty('--y', `${y}px`);
-        });
-
-        btn.addEventListener('mouseleave', () => {
-            btn.style.setProperty('--x', `50%`);
-            btn.style.setProperty('--y', `50%`);
-        });
-    });
 </script>
-
-<footer>
-    © 2025 Robert Software. Contacto: <a href="https://wa.me/51945482880">WhatsApp</a> | Instagram: <a href="https://www.instagram.com/robert.softwar">@robert.softwar</a> | <a href="https://www.robert-software.com">Página Web</a>
-</footer>
-
 </body>
 </html>
