--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -8,38 +8,39 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f0f2f5;
+        background-color: #e6eefb;
         color: #333;
         text-align: center;
+        padding: 40px 20px;
         margin: 0;
-        padding: 0;
+        position: relative;
         min-height: 100vh;
     }
 
     .logo {
         max-width: 180px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
 
     .backup-text {
         font-size: 14px;
+        margin-bottom: 8px;
         color: #555;
-        margin-bottom: 5px;
     }
 
     h1 {
-        font-size: 36px;
+        font-size: 36px; 
+        margin: 15px 0;
         font-weight: bold;
         color: #1a1a1a;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
-        margin: 5px 0 20px;
     }
 
     .message {
         font-size: 16px;
+        margin-top: 15px;
         line-height: 1.5;
         color: #333;
-        margin-bottom: 20px;
     }
 
     .download-link {
@@ -56,26 +57,13 @@
         font-weight: bold;
         font-size: 16px;
         cursor: pointer;
-        transition: 0.3s;
+        transition: background-color 0.3s, transform 0.2s;
         box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        overflow: hidden;
-        position: relative;
     }
 
-    .download-link::after {
-        content: '';
-        position: absolute;
-        top: -50%;
-        left: -50%;
-        width: 200%;
-        height: 200%;
-        background: rgba(255,255,255,0.3);
-        transform: rotate(45deg) translateX(-100%);
-        transition: transform 0.7s ease;
-    }
-
-    .download-link:hover::after {
-        transform: rotate(45deg) translateX(100%);
+    .download-link:hover {
+        background-color: #0056b3;
+        transform: translateY(-2px);
     }
 
     .download-link img {
@@ -83,7 +71,6 @@
         height: 24px;
     }
 
-    /* GIF */
     .arrow-top {
         position: fixed;
         top: 50px;
@@ -100,26 +87,55 @@
         100% { transform: translateY(-8px); }
     }
 
-    /* Cinta superior */
+    footer {
+        font-size: 14px;
+        color: #555;
+        text-align: center;
+        background-color: #e6eefb;
+        padding: 10px 20px;
+        line-height: 1.4;
+        max-width: 800px;
+        margin: 40px auto 0;
+    }
+
+    footer a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    footer a:hover {
+        text-decoration: underline;
+        color: #004080;
+    }
+
+    @media (max-width: 600px) {
+        .download-link {
+            width: 80%;
+            font-size: 18px;
+        }
+    }
+
     .corporate-ticker {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         background-color: #a8c4e6;
-        height: 40px;
-        display: flex;
-        align-items: center;
         overflow: hidden;
+        height: 40px;
         z-index: 9999;
         box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
     }
 
     .ticker-text {
         display: inline-block;
         white-space: nowrap;
-        color: #fff;
+        color: #ffffff;
         font-weight: 600;
+        font-family: 'Arial', sans-serif;
         font-size: 16px;
         padding-left: 100%;
         animation: scrollTicker 20s linear infinite;
@@ -137,27 +153,26 @@
         100% { transform: translateX(-100%); }
     }
 
-    /* Carrusel */
-    .carousel-wrapper {
-        max-width: 800px;
-        margin: 30px auto;
-        position: relative;
-    }
-
     .carousel {
+        position: relative;
+        max-width: 600px;
+        margin: 30px auto;
         overflow: hidden;
         border-radius: 12px;
+        border: 1px solid rgba(0,0,0,0.05);
         box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
 
     .carousel-track {
         display: flex;
         transition: transform 0.5s ease;
+        touch-action: pan-x;
     }
 
     .carousel-track img {
         width: 100%;
         flex-shrink: 0;
+        border-radius: 12px;
         user-select: none;
         pointer-events: none;
     }
@@ -181,232 +196,56 @@
         background-color: rgba(0,0,0,0.6);
     }
 
-    .carousel-arrow-left { left: 10px; }
-    .carousel-arrow-right { right: 10px; }
-
-    /* Productos */
-    .products-section {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 20px;
-        margin: 40px 20px 60px;
+    .carousel-arrow-left {
+        left: 10px;
     }
 
-    .product {
-        width: 240px;
-        background-color: #fff;
-        padding: 15px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        text-align: left;
-    }
-
-    .product h3 {
-        font-size: 16px;
-        font-weight: bold;
-        margin-bottom: 5px;
-    }
-
-    .product p {
-        font-size: 14px;
-        margin: 3px 0;
-    }
-
-    .buy-button {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        gap: 6px;
-        margin-top: 5px;
-        padding: 8px 12px;
-        background-color: #28a745;
-        color: white;
-        border-radius: 6px;
-        text-decoration: none;
-        font-size: 14px;
-        font-weight: bold;
-        transition: background-color 0.2s;
-    }
-
-    .buy-button:hover {
-        background-color: #1e7e34;
-    }
-
-    /* Solicitar Soporte Remoto */
-    .support-section {
-        margin: 40px 20px;
-        padding: 40px 20px;
-        border-radius: 16px;
-        color: #fff;
-        position: relative;
-        overflow: hidden;
-        text-align: center;
-        background: linear-gradient(135deg, #1e3c72, #2a5298, #1e3c72);
-        background-size: 400% 400%;
-        animation: waveBG 6s ease infinite;
-    }
-
-    .support-section h2 {
-        font-size: 28px;
-        margin-bottom: 20px;
-    }
-
-    .support-section p {
-        font-size: 16px;
-        margin-bottom: 30px;
-    }
-
-    .support-btn {
-        display: inline-block;
-        padding: 14px 30px;
-        font-size: 16px;
-        font-weight: bold;
-        color: #fff;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        position: relative;
-        overflow: hidden;
-        background-color: #007bff;
-        transition: all 0.3s ease;
-    }
-
-    .support-btn::before {
-        content: '';
-        position: absolute;
-        top: -50%;
-        left: -50%;
-        width: 200%;
-        height: 200%;
-        background: rgba(255,255,255,0.2);
-        transform: rotate(45deg) translateX(-100%);
-        transition: transform 0.5s ease;
-    }
-
-    .support-btn:hover::before {
-        transform: rotate(45deg) translateX(100%);
-    }
-
-    @keyframes waveBG {
-        0%{background-position:0% 50%;}
-        50%{background-position:100% 50%;}
-        100%{background-position:0% 50%;}
-    }
-
-    /* Footer */
-    footer {
-        font-size: 14px;
-        color: #555;
-        text-align: center;
-        background-color: #f0f2f5;
-        padding: 20px;
-        line-height: 1.6;
-    }
-
-    footer a {
-        color: #007bff;
-        text-decoration: none;
-    }
-
-    footer a:hover {
-        text-decoration: underline;
-        color: #004080;
-    }
-
-    @media (max-width: 768px) {
-        .carousel-wrapper { max-width: 100%; }
-        .products-section { flex-direction: column; align-items: center; }
+    .carousel-arrow-right {
+        right: 10px;
     }
 </style>
 </head>
 <body>
 
-<!-- Cinta superior -->
 <div class="corporate-ticker">
   <div class="ticker-text">
     <img src="rustdesk-logo.png" alt="RustDesk Logo">
     <img src="solzze-logo.png" alt="Solzze Logo">
     <img src="rs-logo.png" alt="RS Logo">
-    Distribución verificada de RustDesk por Robert Software – Herramienta de conexión remota utilizada para brindar soporte técnico profesional, seguro y confiable a nuestros clientes. Descargue las versiones más recientes y certificadas para Windows y macOS.
+    Distribución verificada de RustDesk por Robert Software – Herramienta profesional de conexión remota utilizada para brindar soporte técnico profesional, seguro y confiable a nuestros clientes. Descargue las versiones más recientes y certificadas para Windows y macOS.
   </div>
 </div>
 
-<!-- GIF -->
 <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
-<!-- Logo y respaldo -->
 <p class="backup-text">Respaldado por:</p>
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
 <h1>RustDesk</h1>
-<p class="message">Seleccione su sistema operativo para iniciar la descarga de RustDesk.</p>
+<p class="message">
+    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
+</p>
 
-<!-- Botones de descarga -->
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" class="download-link" id="btnWin">
-    <img src="windows.svg" alt="Windows"> Descargar para Windows
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+   class="download-link" id="btnWin">
+   <img src="windows.svg" alt="Windows"> Descargar para Windows
 </a>
-<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" class="download-link" id="btnMac">
-    <img src="macos.svg" alt="macOS"> Descargar para macOS
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+   class="download-link" id="btnMac">
+   <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
-<!-- Carrusel -->
-<div class="carousel-wrapper">
-    <div class="carousel">
-        <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
-        <div class="carousel-track">
-            <img src="1.jpg" alt="RustDesk 1">
-            <img src="2.png" alt="RustDesk 2">
-            <img src="3.png" alt="RustDesk 3">
-            <img src="4.png" alt="RustDesk 4">
-        </div>
-        <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
+<div class="carousel">
+    <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
+    <div class="carousel-track">
+        <img src="1.jpg" alt="RustDesk 1">
+        <img src="2.png" alt="RustDesk 2">
+        <img src="3.png" alt="RustDesk 3">
+        <img src="4.png" alt="RustDesk 4">
     </div>
+    <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
 </div>
-
-<!-- Productos -->
-<div class="products-section">
-    <div class="product">
-        <h3>Software Ofimático</h3>
-        <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
-        <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
-    </div>
-    <div class="product">
-        <h3>Antivirus</h3>
-        <p>Protección de tus equipos por 1 año contra virus, malware y amenazas online.</p>
-        <p>Precio Perú: S/. 35 | Chile: $15,000 CLP</p>
-        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
-    </div>
-    <div class="product">
-        <h3>Edición de Video</h3>
-        <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
-        <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
-        <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
-    </div>
-</div>
-
-<!-- Solicitar soporte remoto -->
-<div class="support-section">
-    <h2>Solicitar Soporte Remoto</h2>
-    <p>Reciba asistencia profesional y segura para sus sistemas y equipos directamente desde nuestros técnicos certificados.</p>
-    <button class="support-btn">Conectar Ahora</button>
-</div>
-
-<!-- Footer completo -->
-<footer>
-    <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
-    <p>© 2025 Robert Software. Todos los derechos reservados.</p>
-    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
-        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
-        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
-    </p>
-    <p>Redes sociales: 
-        <a href="https://www.instagram.com/robert.softwar" target="_blank">Instagram</a>, 
-        <a href="https://www.facebook.com/RobertSoftware" target="_blank">Facebook</a>, 
-        <a href="https://www.robert-software.com" target="_blank">Página Web</a>
-    </p>
-</footer>
 
 <script>
     const gif = document.getElementById('downloadGif');
@@ -489,5 +328,15 @@
     track.addEventListener('touchend', () => { isDragging = false; });
 
 </script>
+
+<footer>
+    <p><em>Asistencia remota profesional y confiable para sus sistemas y equipos, gestionada por Robert Software.</em></p>
+    <p>© 2025 Robert Software. Todos los derechos reservados.</p>
+    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
+        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
+        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
+    </p>
+</footer>
+
 </body>
 </html>
