--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -43,7 +43,9 @@
         color: #333;
     }
 
+    /* ===== BOTONES DE DESCARGA CON LUZ ===== */
     .download-link {
+        position: relative;
         display: inline-flex;
         align-items: center;
         justify-content: center;
@@ -57,18 +59,42 @@
         font-weight: bold;
         font-size: 16px;
         cursor: pointer;
-        transition: background-color 0.3s, transform 0.2s;
+        overflow: hidden;
         box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        transition: transform 0.2s;
     }
 
     .download-link:hover {
-        background-color: #0056b3;
         transform: translateY(-2px);
     }
 
     .download-link img {
         width: 24px;
         height: 24px;
+    }
+
+    /* Efecto de luz */
+    .download-link::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -50%;
+        width: 200%;
+        height: 200%;
+        background: radial-gradient(circle 200px, rgba(255,255,255,0.6) 0%, transparent 80%);
+        transform: translate(-50%, -50%) rotate(45deg);
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.3s;
+    }
+
+    .download-link:hover::after {
+        opacity: 1;
+    }
+
+    /* Seguimiento del puntero */
+    .download-link.active::after {
+        transition: none;
     }
 
     .arrow-top {
@@ -281,6 +307,24 @@
             "https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg",
             "https://api.counterapi.dev/v2/rs/Mac/up"
         );
+    });
+
+    // ===== LUZ SIGUE PUNTERO =====
+    const buttons = document.querySelectorAll('.download-link');
+
+    buttons.forEach(btn => {
+        btn.addEventListener('mousemove', e => {
+            const rect = btn.getBoundingClientRect();
+            const x = e.clientX - rect.left;
+            const y = e.clientY - rect.top;
+            btn.style.setProperty('--x', x + 'px');
+            btn.style.setProperty('--y', y + 'px');
+            btn.classList.add('active');
+        });
+
+        btn.addEventListener('mouseleave', () => {
+            btn.classList.remove('active');
+        });
     });
 
     const track = document.querySelector('.carousel-track');
